Fixed overflow to overflow-x

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -161,7 +161,7 @@ body {
   font-size: 1rem;
   color: #232323;
   line-height: 1.5;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h2 {
