--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,7 +13,7 @@ body {
   font-size: fs(300);
   color: clr(neutral, normal);
   line-height: 1.5;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h2 {
